--- a/.github/workflows/build_test_eshop.yaml
+++ b/.github/workflows/build_test_eshop.yaml
@@ -1,6 +1,6 @@
 name: 'Build and test our eshop'
 
-on: 
+on:
   workflow_dispatch:
   pull_request:
     branches:
@@ -58,6 +58,17 @@ jobs:
         run: |
           npm rebuild node-sass --force
           npm run build -- --colors
+
+      - name: Cache node modules and build folder
+        if: ${{ github.ref == 'refs/heads/master' }}
+        uses: actions/cache@v3
+        with:
+          path: |
+            -/.npm
+            ./node_modules
+            ./build
+          key: ${{ runner.os }}-build-${{ github.run_id }}
+          restore-keys: ${{ runner.os }}-build-${{ github.run_id }}
   Test:
     needs: Install
     runs-on: Ubuntu-latest
@@ -82,3 +93,25 @@ jobs:
       - name: Run Tests
         run: |
           npm run test -- --colors
+  Deploy:
+    needs: [Build, Test]
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/master' }}
+
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.WORKFLOW_TOKEN }}
+
+      - name: Load node modules and build folder
+        uses: actions/cache@v3
+        with:
+          path: |
+            -/.npm
+            ./node_modules
+            ./build
+          key: ${{ runner.os }}-build-${{ github.run_id }}
+
+      - name: Deploy to Firebase
+        run: ./node_modules/.bin/firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
